[project]
name = "tabicl"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.2",
    "huggingface-hub>=1.16.4",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "psutil>=7.2.2",
    "python-lsp-server[all]>=1.14.0",
    "ruff>=0.15.14",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
]
